updated relative links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="css/all.min.css">
 		<!-- <link rel="stylesheet" href="css/theme/black.css"> -->
     <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" href="/css/asciinema-player.css">
+    <link rel="stylesheet" href="css/asciinema-player.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/monokai.css">
@@ -29,21 +29,21 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-        <section data-background="/images/background.png">
+        <section data-background="images/background.png">
           <h1>
-            <div><img src="/images/petsapp.svg" width="10%" class="plain" style="background: none"></div>
+            <div><img src="images/petsapp.svg" width="10%" class="plain" style="background: none"></div>
             <div>PetsApp</div>
           </h1>
           <h2 class="subtitle">How i started my fake startup with the <b>Janus Mobile SDK</b></h2>
           <div style="margin-top: 100px">
             <div style="width: 80%; margin-left: auto; margin-right: auto">
               <div style="width: 45%; display: inline-block">
-                <img src="/images/januscon.png" height="75px">
+                <img src="images/januscon.png" height="75px">
               </div>
               <div style="width: 45%; margin-left: 5%; display: inline-block">
                 <div style="display: table-row">
                   <div style="display: table-cell">
-                    <img src="/images/me.png" style="border-radius: 50%" height="75px">
+                    <img src="images/me.png" style="border-radius: 50%" height="75px">
                   </div>
                   <div style="display: table-cell; padding-left: 25px; padding-top: 10px; vertical-align: top">
                     <ul class="plain">
@@ -70,7 +70,7 @@
           </aside>
         </section>
         <section data-background-color="#303F4C">
-          <a href="https://www.statwolf.com"><img src="/images/statwolf.svg" width="30%"></a>
+          <a href="https://www.statwolf.com"><img src="images/statwolf.svg" width="30%"></a>
           <aside class="notes">
             In this talk, I'd like to introduce you to my flatmate Boris, a little red shark living in my sitting room.
           </aside>
@@ -78,7 +78,7 @@
         <section data-state="boris">
           <h1><i class="fas fa-fish"></i> Boris</h1>
           <video id="boris" style="border-radius: 5%" loop="true" muted="true" autoplay="true" width="30%">
-            <source src="/images/boris.mp4">
+            <source src="images/boris.mp4">
           </video>
           <aside class="notes">
             Boris and I used to have a problem: working for an Irish company from home, very often, like once or twice per month,   I have to go to my company headquarter to meet my colleagues. Of course, Boris can't come with me, and it is always complaining about the fact it is still alone.
@@ -90,7 +90,7 @@
         <!-- </section> -->
         <section>
           <h1>
-            <div><img src="/images/petsapp.svg" width="10%" class="plain" style="background: none"></div>
+            <div><img src="images/petsapp.svg" width="10%" class="plain" style="background: none"></div>
             <div>PetsApp</div>
           </h1>
           <h2>A video chat for puppies</h2>
@@ -113,11 +113,11 @@
           </aside>
         </section>
         <section>
-          <img src="/images/webrtc.png">
+          <img src="images/webrtc.png">
         </section>
         <section>
           <h1><i class="fas fa-gift"></i> Minimum viable product</h1>
-          <img src="/images/complete-mvp.svg">
+          <img src="images/complete-mvp.svg">
         </section>
         <section data-transition="slide-in none-out">
           <h1><i class="fas fa-server"></i> Server requirements</h1>
@@ -132,15 +132,15 @@
         <section data-transition="none-in slide-out">
           <h1><i class="fas fa-server"></i> Server requirements</h1>
           <div style="height: 200px">
-            <img src="/images/janus.png">
+            <img src="images/janus.png">
           </div>
         </section>
         <section>
           <h1><i class="fas fa-gift"></i> Minimum viable product</h1>
-          <img src="/images/janus-mvp.svg">
+          <img src="images/janus-mvp.svg">
         </section>
         <section>
-          <img src="/images/serverless.jpg">
+          <img src="images/serverless.jpg">
         </section>
         <!-- <section data-state="run-janus"> -->
           <!-- <asciinema-player id="run-janus" src="/cast/runjanus.cast" preload="true" idle-time-limit="1" rows="40"></asciinema> -->
@@ -161,7 +161,7 @@
           <h1><a href="https://github.com/helloiampau/janus-client">janus-client SDK</a></h1>
           <h2>handcrafted with <i class="fas fa-heart"></i> by @helloiampau and Meetecho S.R.L.</h2>
         </section>
-        <section data-background-video="/images/party.mp4" data-background-video-loop="true" data-transition="fade-in slide-out">
+        <section data-background-video="images/party.mp4" data-background-video-loop="true" data-transition="fade-in slide-out">
           <h1><a href="https://github.com/helloiampau/janus-client" style="color: white;">janus-client SDK</a></h1>
           <h2 style="color: white;">handcrafted with <i class="fas fa-heart"></i> by @helloiampau and Meetecho S.R.L.</h2>
         </section>
@@ -176,10 +176,10 @@
           </ul>
         </section>
         <section>
-          <img src="/images/wat.jpg">
+          <img src="images/wat.jpg">
         </section>
         <section>
-          <img src="/images/schema.svg">
+          <img src="images/schema.svg">
           <aside class="notes">
 I want to tell you a story: have you ever tried to integrate c++ code in mobile applications?
 for objective-c world the thing is quite straightforward... the apple compiler understand both c++ and objective c and you can write a mixed module in objective-c++ that looks like a languages frankestein.
@@ -187,7 +187,7 @@ for jni the thing is a little different: I'll show you how a JNI code looks like
           </aside>
         </section>
         <section>
-          <img src="/images/jni.jpg">
+          <img src="images/jni.jpg">
         </section>
         <section>
           <div>
@@ -436,11 +436,11 @@ janus = interface +c {
           </pre>
         </section>
         <section>
-          <img src="/images/djinni-schema.svg">
+          <img src="images/djinni-schema.svg">
         </section>
         <section>
           <h1>
-            <div><img src="/images/petsapp.svg" width="10%" class="plain" style="background: none"></div>
+            <div><img src="images/petsapp.svg" width="10%" class="plain" style="background: none"></div>
             <div>PetsApp</div>
           </h1>
         </section>
@@ -539,7 +539,7 @@ dependencies {
         </section>
         <section>
           <h1><i class="far fa-file-code"></i> Code</h1>
-          <img src="/images/studio.png" width="10%">
+          <img src="images/studio.png" width="10%">
         </section>
         <section>
           <h1><i class="fas fa-user-friends"></i> Entities</h2>
@@ -783,19 +783,19 @@ handle.dispatch("join", bundle);
         </section>
         <section>
           <h1><i class="far fa-file-code"></i> Media View</h1>
-          <img src="/images/mediaview.png" width="50%">
+          <img src="images/mediaview.png" width="50%">
         </section>
         <section>
           <h1><i class="far fa-file-code"></i> Code</h1>
-          <img src="/images/studio.png" width="10%">
+          <img src="images/studio.png" width="10%">
         </section>
         <section data-state="app">
           <video id="app" style="border-radius: 5%" muted="true" autoplay="true" width="30%">
-            <source src="/images/app.mp4">
+            <source src="images/app.mp4">
           </video>
         </section>
         <section>
-          <img src="/images/thanks.jpg">
+          <img src="images/thanks.jpg">
         </section>
 			</div>
 		</div>
@@ -816,7 +816,7 @@ handle.dispatch("join", bundle);
 				]
 			});
 		</script>
-    <script src="/js/asciinema-player.js"></script>
+    <script src="js/asciinema-player.js"></script>
     <script>
 Reveal.addEventListener('run-janus', function() {
   const p = document.getElementById('run-janus');
