updated cast link

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ janus = interface +c {
           </h1>
         </section>
         <section data-state="initialize-code">
-          <asciinema-player id="initialize-code" src="/cast/initialize.cast" preload="true" idle-time-limit="1" rows="40"></asciinema>
+          <asciinema-player id="initialize-code" src="cast/initialize.cast" preload="true" idle-time-limit="1" rows="40"></asciinema>
         </section>
         <section>
           <h1><i class="far fa-file-code"></i> <div class="inline-code">settings.gradle</div></h1>
